# InlineResources

./: CMakeLists.txt  Dockerfile  README.md  build.sh
CMake/InlineResources/: GenerateInlineResource.cmake  GenerateInlineResource.py  InlineResource.cpp.in  InlineResourcesConfig.cmake
Lib/: CMakeLists.txt  InlineResources.cpp  InlineResources.h
Lib/Test/: CMakeLists.txt  InlineResourcesTest.cpp  TestResource1.txt  TestResource2.txt  TestResourceContainingString.txt
Lib/Test/Directory/: TestResource.txt
Lib/Test/Resources/: Resource.txt  TestResource.txt  TestResource2.txt
